# module38

Task1/: CMakeLists.txt  main.cpp
Task2/: CMakeLists.txt  main.cpp
Task3/: CMakeLists.txt  main.cpp
